tests/ui/member_staged.lex
fn main() {
    val s = "hi";
    print(s.upper());
}
